cluster/dex/dex.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  type: ClusterIP
  ports:
    - port: 5556
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: dex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: dex
  labels:
    app: dex
  annotations:
    scheduler.alpha.kubernetes.io/critical-pod: ''
spec:
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
      annotations:
        checksum/config: 9b0b442bbda13e592dd0135b7104c976bc96351cd91557bb21c91b606a57e0b5
    spec:
      volumes:
        - name: config
          secret:
            secretName: dex-config
      serviceAccountName: dex
      containers:
        - name: dex
          image: docker.io/dexidp/dex:v2.30.2@sha256:27cf2e8644f2ea1ebc6de711b0ace4b5ee2d1f442e148eabbaa8c68308062475
          imagePullPolicy: IfNotPresent
          command: [/usr/local/bin/dex, serve, /etc/dex/config.yaml]
          ports:
            - name: http
              containerPort: 5556
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5556
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5556
            initialDelaySeconds: 5
            timeoutSeconds: 1
          volumeMounts:
            - name: config
              mountPath: /etc/dex
          resources: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
spec:
  tls:
    - hosts:
        - sso.realliance.net
      secretName: sso-tls
  rules:
    - host: sso.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
